outputs_20260330-085215-c63974f1/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_4umscbu1\src\egtm_atom_3_phase_inverter_pwm.c: In function 'interruptEgtmAtom':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_4umscbu1\src\egtm_atom_3_phase_inverter_pwm.c:81:5: error: implicit declaration of function 'IfxPort_togglePin' [-Wimplicit-function-declaration]
   81 |     IfxPort_togglePin(LED);
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_4umscbu1\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_4umscbu1\src\egtm_atom_3_phase_inverter_pwm.c:43:38: error: 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' undeclared (first use in this function)
   43 | #define PHASE_U_LS                 (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_4umscbu1\src\egtm_atom_3_phase_inverter_pwm.c:112:62: note: in expansion of macro 'PHASE_U_LS'
  112 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;  /* LS: active-low  */
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_4umscbu1\src\egtm_atom_3_phase_inverter_pwm.c:43:38: note: each undeclared identifier is reported only once for each function it appears in
   43 | #define PHASE_U_LS                 (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_4umscbu1\src\egtm_atom_3_phase_inverter_pwm.c:112:62: note: in expansion of macro 'PHASE_U_LS'
  112 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;  /* LS: active-low  */
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_4umscbu1\src\egtm_atom_3_phase_inverter_pwm.c:221:5: error: implicit declaration of function 'IfxPort_setPinModeOutput' [-Wimplicit-function-declaration]
  221 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
